--- a/shopping-microservice-dev.properties
+++ b/shopping-microservice-dev.properties
@@ -1,4 +1,4 @@
-shopping.property=Shopping Profile Dev
+shopping.property=Shopping Profile Dev Updated
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generated-ddl=true
