--- a/shopping-microservice-dev.properties
+++ b/shopping-microservice-dev.properties
@@ -1,4 +1,5 @@
 shopping.property=Shopping Profile Dev Updated
+spring.datasource.url=jdbc:mongodb://localhost:27017/shoppingdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generated-ddl=true
