--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,3 +1,3 @@
-shopping.property=Product Profile Dev
+shopping.property=Product Profile Devv
 spring.data.mongodb.uri= mongodb://localhost:27017/productdb
 app.testProp=Property of test
