--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,3 +1,3 @@
-product.property=Product Profile Dev
-spring.data.mongodb.uri= mongodb://localhost:27017/productdb
+product.property=Bank Profile Dev
+spring.data.mongodb.uri= mongodb://localhost:27017/banca
 app.testProp=Property of test Updated again
