--- a/bank-service-dev.properties
+++ b/bank-service-dev.properties
@@ -1,3 +1,3 @@
 product.property=Bank Profile Dev
-spring.data.mongodb.uri= mongodb://localhost:27017/banca
+spring.data.mongodb.uri= mongodb://localhost:27017/test
 app.testProp=Property of test Updated again
