--- a/shopping-microservice-dev.properties
+++ b/shopping-microservice-dev.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mongodb://localhost:27017/shoppingdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generated-ddl=true
+
+app.testProp=Property of Test
